# d-HNSW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: datasets.sh  install_dependencies.sh  setup.sh
src/bench/: client_insert.cc  client_insert_reconstruction.cc  client_insert_then_search.cc  search_client.cc  search_client_pipelined_reuse_thread.cc  search_client_reconstruction.cc  search_server.cc  search_server_reconstruction.cc  server.cc  test_subhnsw_distribution.cc
src/dhnsw/: DistributedHnsw.cpp  DistributedHnsw.h  data_config.hh  dhnsw_io.cpp  dhnsw_io.h  reconstruction.cpp  reconstruction.hh  reporter.hh  statics.hh
tests/: client_multithreads.cc  client_normal.cc  deep100M_try.cc  mix_client.cc  reconstruction_test.cc  search_client_pipeline.cc  search_client_throughput.cc  search_server_for_deep100M.cc  search_server_for_sift100M.cc  search_server_read.cc  search_sift1B_client.cc  search_sift1B_server.cc  test_dhnsw.cpp  test_dhnsw_SIFT10K.cpp  test_dhnsw_single_machine.cpp  test_local.cc  test_local_hnsw.cpp  test_local_insert.cpp  test_local_whole.cc  validate_trigger_changes.py
tests/dhnsw_rdma/: client_normal.cc  server.cc
tests/local_micro/: query_distribution_client.cc  query_distribution_server.cc
tests/similaritystudy/: M_sub_hnsw.json  num_meta.json  num_sub_hnsw.json  test_similarity.cc
tests/test_insert/: client_multithreads.cc  server.cc  test_insert.cc
tests/test_rdma/: client.cc  client_ud.cc  server.cc  server_ud.cc
tests/twosiderpcoverhttp/: client.cc  server.cc
tools/: aggregate_throughput.py  analyze_throughput_lite.py  analyze_throughput_over_time.py  convert.py  generate_mock_batches.py  pick_vecs.py  plot_throughput.py
util/: read_dataset.h
xcomm/src/rpc/: proto.hh
xcomm/src/transport/: trait.hh
